# AdventureCraft

./: CMakeLists.txt  README.md  games.c  games.h  main.c
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platform2.yml
